# eco_bikes_etl

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: black.yml  run-tests.yaml  run-tests.yml
GCP_SQL/: gcp_tables.sql
SQL/: 1-schema.sql  2- ddl.sql
config/: config.ini  config.ini.example  config.py  constants.py
dags/: 1-external_load_dag_etl.py  1-general_load_dag_etl.py  2-etl_extract_transform_load.py  2-external_etl_extract_transform_load.py  3-GCP-load.py  3-external_load_dag_etl.py  4-external_etl_extract_transform_load.py  5-GCP-load.py  dag_etl.py  etl_extract_transform_load.py  general_load_dag_etl.py
dags/config/: .env.example  config.ini.example  config.py  constants.py
dags/etl_modules/: extract.py  gcp_load.py  gcp_transform.py  load.py  transform.py
dags/etl_modules/extract/: extract.py  extract_eco_bikes.py  extract_weather.py
dags/tests/: test_dim_date_table.py  test_json_extract.py  test_transform_weather.py
dags/utils/: utils.py
dags/utlis/: utils.py
