[tool.poetry]
name = "eco-bikes-etl"
version = "0.1.0"
description = ""
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"
packages = [
    { include = "etl_modules",  from = "dags" },
    { include = "utils",  from = "dags" },
    { include = "config" }
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"