[tool.poetry]
name = "etl_eco_bikes"
version = "0.1.0"
description = ""
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"
packages = [
    { include = "etl_modules",from = "dags"},
    { include = "config", from = "dags"},
    { include = "utils", from = "dags"},
    { include = "tests", from = "dags"}
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
requests = "^2.31.0"
pyarrow = "^13.0.0"
fastparquet = "^2023.8.0"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
